Bug 401917 - context menu crash
Summary: context menu crash
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Analyzer: Clang-Tidy (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 402208 402226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-09 09:06 UTC by Rolf Eike Beer
Modified: 2018-12-18 14:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2018-12-09 09:06:30 UTC
I did a right click in the editor window, but got this backtrace. This is git master from ~1 week ago.

Thread 1 (Thread 0x7fda3c2c8a40 (LWP 8434)):
[KCrash Handler]
#6  0x00007fda28b2458d in 
ClangTidy::Plugin::contextMenuExtension(KDevelop::Context*, QWidget*) 
(this=0x2580a60, context=0x7fff0369f8b0, parent=0x7bece00) at /home/ebeer/
repos/upstream/KDE/kdevelop/plugins/clangtidy/plugin.cpp:282
#7  0x00007fda52858a36 in 
KDevelop::PluginController::queryPluginsForContextMenuExtensions(KDevelop::Context*, 
QWidget*) const (this=0x247e0a0, context=0x7fff0369f8b0, parent=0x7bece00) at 
/home/ebeer/repos/upstream/KDE/kdevelop/kdevplatform/shell/
plugincontroller.cpp:720
#8  0x00007fda5289aeb1 in 
KDevelop::TextDocument::populateContextMenu(KTextEditor::View*, QMenu*) 
(this=0xaf0f3a0, v=0x9c588a0, menu=0xae37c60) at /home/ebeer/repos/upstream/
KDE/kdevelop/kdevplatform/shell/textdocument.cpp:686
#9  0x00007fda5289ef7e in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, 
QtPrivate::List<KTextEditor::View*, QMenu*>, void, void 
(KDevelop::TextDocument::*)(KTextEditor::View*, QMenu*)>::call(void 
(KDevelop::TextDocument::*)(KTextEditor::View*, QMenu*), 
KDevelop::TextDocument*, void**) (f=(void (KDevelop::TextDocument::*)
(KDevelop::TextDocument * const, KTextEditor::View *, QMenu *)) 0x7fda5289ac8e 
<KDevelop::TextDocument::populateContextMenu(KTextEditor::View*, QMenu*)>, 
o=0xaf0f3a0, arg=0x7fff0369fae0) at /usr/include/qt5/QtCore/
qobjectdefs_impl.h:134
#10 0x00007fda5289ea57 in QtPrivate::FunctionPointer<void 
(KDevelop::TextDocument::*)(KTextEditor::View*, 
QMenu*)>::call<QtPrivate::List<KTextEditor::View*, QMenu*>, void>(void 
(KDevelop::TextDocument::*)(KTextEditor::View*, QMenu*), 
KDevelop::TextDocument*, void**) (f=(void (KDevelop::TextDocument::*)
(KDevelop::TextDocument * const, KTextEditor::View *, QMenu *)) 0x7fda5289ac8e 
<KDevelop::TextDocument::populateContextMenu(KTextEditor::View*, QMenu*)>, 
o=0xaf0f3a0, arg=0x7fff0369fae0) at /usr/include/qt5/QtCore/
qobjectdefs_impl.h:167
#11 0x00007fda5289e46f in QtPrivate::QSlotObject<void 
(KDevelop::TextDocument::*)(KTextEditor::View*, QMenu*), 
QtPrivate::List<KTextEditor::View*, QMenu*>, void>::impl(int, 
QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, 
this_=0x97c0700, r=0xaf0f3a0, a=0x7fff0369fae0, ret=0x0) at /usr/include/qt5/
QtCore/qobjectdefs_impl.h:396
#12 0x00007fda4ee901a0 in QMetaObject::activate(QObject*, int, int, void**) () 
at /usr/lib64/libQt5Core.so.5
#13 0x00007fda5148f86e in 
KTextEditor::View::contextMenuAboutToShow(KTextEditor::View*, QMenu*) () at /
usr/lib64/libKF5TextEditor.so.5
#14 0x00007fda5149a4bf in  () at /usr/lib64/libKF5TextEditor.so.5
#15 0x00007fda4ee9004b in QMetaObject::activate(QObject*, int, int, void**) () 
at /usr/lib64/libQt5Core.so.5
#16 0x00007fda4fd4b38c in QMenu::popup(QPoint const&, QAction*) () at /usr/
lib64/libQt5Widgets.so.5
#17 0x00007fda513bcd97 in  () at /usr/lib64/libKF5TextEditor.so.5
#18 0x00007fda4fc197f8 in QWidget::event(QEvent*) () at /usr/lib64/
libQt5Widgets.so.5
#19 0x00007fda4fbdb4a1 in QApplicationPrivate::notify_helper(QObject*, 
QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#20 0x00007fda4fbe2f8e in QApplication::notify(QObject*, QEvent*) () at /usr/
lib64/libQt5Widgets.so.5
#21 0x00007fda4ee66e09 in QCoreApplication::notifyInternal2(QObject*, QEvent*) 
() at /usr/lib64/libQt5Core.so.5
#22 0x00007fda4fc34b21 in  () at /usr/lib64/libQt5Widgets.so.5
#23 0x00007fda4fc36ebe in  () at /usr/lib64/libQt5Widgets.so.5
#24 0x00007fda4fbdb4a1 in QApplicationPrivate::notify_helper(QObject*, 
QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#25 0x00007fda4fbe2af0 in QApplication::notify(QObject*, QEvent*) () at /usr/
lib64/libQt5Widgets.so.5
#26 0x00007fda4ee66e09 in QCoreApplication::notifyInternal2(QObject*, QEvent*) 
() at /usr/lib64/libQt5Core.so.5
#27 0x00007fda4f4fbddb in 
QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) 
() at /usr/lib64/libQt5Gui.so.5
#28 0x00007fda4f4fdcd5 in 
QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) 
() at /usr/lib64/libQt5Gui.so.5
#29 0x00007fda4f4d803b in 
QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) 
() at /usr/lib64/libQt5Gui.so.5
#30 0x00007fda3a66e9db in  () at /usr/lib64/libQt5XcbQpa.so.5
#31 0x00007fda4ee65adb in 
QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/
libQt5Core.so.5
#32 0x00007fda4ee6dc52 in QCoreApplication::exec() () at /usr/lib64/
libQt5Core.so.5
#33 0x0000000000413654 in main(int, char**) (argc=1, argv=0x7fff036a2238) at /
home/ebeer/repos/upstream/KDE/kdevelop/app/main.cpp:846
[Inferior 1 (process 8434) detached]
Comment 1 Kevin Funk 2018-12-17 09:50:02 UTC
*** Bug 402208 has been marked as a duplicate of this bug. ***
Comment 2 Francis Herne 2018-12-18 13:04:46 UTC
*** Bug 402226 has been marked as a duplicate of this bug. ***
Comment 3 Francis Herne 2018-12-18 14:13:28 UTC
Git commit df225e7795cc986f9b5817ca995b235fe970f5d7 by Francis Herne.
Committed on 18/12/2018 at 14:10.
Pushed by flherne into branch 'master'.

[clang-tidy] Fix context-menu crash for files not in a project

M  +2    -1    plugins/clangtidy/plugin.cpp

https://commits.kde.org/kdevelop/df225e7795cc986f9b5817ca995b235fe970f5d7
Comment 4 peje66 2018-12-18 14:18:06 UTC
I can confirm that my issue is fixed with this patch
Comment 5 Francis Herne 2018-12-18 14:19:15 UTC
Wow, thanks for the very quick testing!