[clang-tidy] Fix context-menu crash for files not in a project

BUG: 401917